--- a/project/package.json
+++ b/project/package.json
@@ -43,6 +43,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -70,6 +71,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
+    "youtube-transcript": "^1.2.1",
+    "youtube-transcript-api": "^1.1.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
